--- a/build.gradle
+++ b/build.gradle
@@ -27,9 +27,9 @@ sourceCompatibility = targetCompatibility = compileJava.sourceCompatibility = co
 
 minecraft
 {
-	mappings channel: 'snapshot', version: '20190719-1.14.3'
+	mappings channel: 'snapshot', version: '20200514-1.15.1'
 
-	// accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg')
+	accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg')
 
 	runs
 	{
@@ -90,7 +90,8 @@ minecraft
 
 dependencies
 {
-	minecraft 'net.minecraftforge:forge:1.14.4-28.2.3'
+    minecraft 'net.minecraftforge:forge:1.15.2-31.2.30'
+
 }
 
 jar
@@ -105,9 +106,9 @@ jar
 				"Specification-Version": version,
 				"Implementation-Title": archivesBaseName,
 				"Implementation-Version": version,
-				"Implementation-Vendor" : "melonslise",
+				"Implementation-Vendor" :"melonslise",
 				"Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
 			]
 		)
-	}
+    }
 }
