--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -1,1 +1,1 @@
-public net.minecraft.client.renderer.culling.ClippingHelperImpl func_228953_a_(DDDDDD)Z # isBoxInFrustum
+public net.minecraft.client.renderer.culling.ClippingHelper func_228953_a_(DDDDDD)Z # isBoxInFrustum
