Split, Updated and Added new options to config, Improved tooltips, Optimized rendering, Fixed #40
- Added new config options for default lock length and default lock pick strength. This allows to control the values of each new item, while still allowing for editing their nbt individually
- Split off the "deaf mode" feature into a separate client config
- Updated config to include shulker boxes as a lockable block
- Improved lock and lock pick tooltips to show the default value if their nbt is missing
- Optimized rendering further
- Fixed a critical crash with optifine

--- a/build.gradle
+++ b/build.gradle
@@ -19,7 +19,7 @@ apply plugin: 'net.minecraftforge.gradle'
 apply plugin: 'eclipse'
 apply plugin: 'maven-publish'
 
-version = '2.4'
+version = '2.5'
 group = 'melonslise.locks'
 archivesBaseName = 'locks'
 
@@ -75,7 +75,7 @@ minecraft
 
 			property 'forge.logging.console.level', 'debug'
 
-			args '--mod', 'examplemod', '--all', '--output', file('src/generated/resources/')
+			args '--mod', 'locks', '--all', '--output', file('src/generated/resources/')
 
 			mods
 			{
