--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -1,2 +1,4 @@
 public net.minecraft.client.renderer.culling.ClippingHelper func_228953_a_(DDDDDD)Z # isBoxInFrustum
 public net.minecraft.client.renderer.WorldRenderer field_175001_U # debugFixedClippingHelper
+public-f net.minecraft.world.biome.BiomeGenerationSettings field_242484_f # field_242484_f
+public net.minecraft.world.gen.feature.WorldDecoratingHelper field_242889_a #field_242889_a
