--- a/build.gradle
+++ b/build.gradle
@@ -106,19 +106,16 @@ jar
 {
 	manifest
 	{
-		attributes
-		(
-			[
-				"Specification-Title": archivesBaseName,
-				"Specification-Vendor": "melonslise",
-				"Specification-Version": version,
-				"Implementation-Title": archivesBaseName,
-				"Implementation-Version": version,
-				"Implementation-Vendor" :"melonslise",
-				"Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ"),
-				"MixinConfigs": archivesBaseName + ".mixins.json"
-			]
-		)
+		attributes([
+			"Specification-Title": archivesBaseName,
+			"Specification-Vendor": "melonslise",
+			"Specification-Version": version,
+			"Implementation-Title": archivesBaseName,
+			"Implementation-Version": version,
+			"Implementation-Vendor" :"melonslise",
+			"Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ"),
+			"MixinConfigs": archivesBaseName + ".mixins.json"
+		])
 	}
 }
 
