--- a/build.gradle
+++ b/build.gradle
@@ -97,17 +97,14 @@ jar
 {
 	manifest
 	{
-		attributes
-		(
-			[
-				"Specification-Title": archivesBaseName,
-				"Specification-Vendor": "melonslise",
-				"Specification-Version": version,
-				"Implementation-Title": archivesBaseName,
-				"Implementation-Version": version,
-				"Implementation-Vendor" : "melonslise",
-				"Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
-			]
-		)
+		attributes([
+			"Specification-Title": archivesBaseName,
+			"Specification-Vendor": "melonslise",
+			"Specification-Version": version,
+			"Implementation-Title": archivesBaseName,
+			"Implementation-Version": version,
+			"Implementation-Vendor" : "melonslise",
+			"Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
+		])
 	}
 }
