--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,7 @@ buildscript
 		mavenCentral()
 		maven
 		{
-			url = 'https://dist.creeper.host/Sponge/maven'
+			url = 'https://repo.spongepowered.org/repository/maven-public/'
 		}
 	}
 	dependencies
